--- a/{{cookiecutter.role_name}}/molecule/default/converge.yml
+++ b/{{cookiecutter.role_name}}/molecule/default/converge.yml
@@ -2,6 +2,6 @@
 - name: Converge
   hosts: all
   tasks:
-    - name: "Include rolename"
+    - name: "Include {{cookiecutter.role_name}}"
       include_role:
-        name: "rolename"
+        name: "{{cookiecutter.role_name}}"
