--- a/{{cookiecutter.role_name}}/molecule/default/molecule.yml
+++ b/{{cookiecutter.role_name}}/molecule/default/molecule.yml
@@ -4,13 +4,24 @@ dependency:
 driver:
   name: docker
 platforms:
-  - name: instance
-    image: rockylinux
+  - name: instance8
+    image: rockylinux:8
     privileged: true
-    volume_mounts:
-      - "sys/fs/cgroup:/sys/fs/cgroup:ro"
+    volumes:
+      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
     command: "/usr/sbin/init"
     pre_build_image: true
+    cgroupns_mode: host
+
+  - name: instance9
+    image: eniocarboni/docker-rockylinux-systemd:9
+    privileged: true
+    volumes:
+      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
+    command: "/usr/sbin/init"
+    pre_build_image: true
+    cgroupns_mode: host
+
 provisioner:
   name: ansible
 verifier:
